script file is fully namespaced, not broken yet. Also fixed grid spacing issue.

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -62,6 +62,8 @@ ul.recipePreviews{
     list-style: none;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
+    grid-row-gap: 10px;
+    grid-column-gap: 10px;
     list-style-type: none;
     padding: 0;
         li{
